force-app/main/default/objects/Applicant__c/fields/Applicant_address_field__c.field-meta.xml
<CustomField>
    <fullName>Applicant_address_field__c</fullName>
    <label>Applicant address field</label>
    <type>TextArea</type>
</CustomField>