force-app/main/default/objects/Applicant__c/fields/Applicant_Reputation__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Reputation__c</fullName>
    <formula>IF(  ISPICKVAL(Gender__c, &apos;male&apos;) , &apos;good&apos;,  IF(  ISPICKVAL(Gender__c, &apos;female&apos;)  , &apos;bad&apos;, &apos;not allowed&apos;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant Reputation</label>
    <type>Text</type>
</CustomField>