force-app/main/default/objects/Applicant__c/fields/DOB_del__c.field-meta.xml
<CustomField>
    <fullName>DOB_del__c</fullName>
    <label>DOB</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>