force-app/main/default/objects/Applicant__c/fields/Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Eligibility__c</fullName>
    <formula>IF( Age__c &gt;=18,

  IMAGE(&apos;https://airtellimited68-dev-ed--c.documentforce.com/servlet/servlet.ImageServer?id=0155i000000Y0f2&amp;oid=00D5i0000012Nsf&amp;lastMod=1651995469000&apos;, &apos;Yes Logo&apos;,30,30) , 

 IMAGE(&apos;https://airtellimited68-dev-ed--c.documentforce.com/servlet/servlet.ImageServer?id=0155i000000Y0es&amp;oid=00D5i0000012Nsf&amp;lastMod=1651995059000&apos;, &apos;No Loogo&apos;,30,30) 




)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eligibility</label>
    <type>Text</type>
</CustomField>