force-app/main/default/objects/Applicant__c/fields/Gender_logo__c.field-meta.xml
<CustomField>
    <fullName>Gender_logo__c</fullName>
    <formula>IF(  ISPICKVAL( Gender__c , &apos;male&apos;) ,

  IMAGE(&apos;https://airtellimited68-dev-ed--c.documentforce.com/servlet/servlet.ImageServer?id=0155i000000Y0f2&amp;oid=00D5i0000012Nsf&amp;lastMod=1651995469000&apos;, &apos;&apos;, 30, 30) , 

 IF( ISPICKVAL( Gender__c , &apos;female&apos;) ,

 IMAGE(&apos;https://airtellimited68-dev-ed--c.documentforce.com/servlet/servlet.ImageServer?id=0155i000000Y0es&amp;oid=00D5i0000012Nsf&amp;lastMod=1651995059000&apos;, &apos;&apos;, 30, 30) ,

  IMAGE(&apos;https://airtellimited68-dev-ed--c.documentforce.com/servlet/servlet.ImageServer?id=0155i000000Y0f7&amp;oid=00D5i0000012Nsf&amp;lastMod=1651999417000&apos;, &apos;&apos;, 30, 30) ) 




)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gender logo</label>
    <type>Text</type>
</CustomField>