force-app/main/default/objects/Applicant__c/fields/Gurenter_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Gurenter_Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gurenter Applicant</label>
    <referenceTo>Applicant__c</referenceTo>
    <relationshipLabel>Applicants</relationshipLabel>
    <relationshipName>Applicants</relationshipName>
    <type>Lookup</type>
</CustomField>