force-app/main/default/objects/Applicant__c/fields/List_Of_Address__c.field-meta.xml
<CustomField>
    <fullName>List_Of_Address__c</fullName>
    <label>List Of Address</label>
    <type>TextArea</type>
</CustomField>