force-app/main/default/objects/Applicant__c/fields/Min_All__c.field-meta.xml
<CustomField>
    <fullName>Min_All__c</fullName>
    <label>Min (All)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>