force-app/main/default/objects/Applicant__c/fields/My_Lucky_Number__c.field-meta.xml
<CustomField>
    <fullName>My_Lucky_Number__c</fullName>
    <formula>IF( Applicant_type__c == &apos;Major&apos;, 33, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Lucky Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>