force-app/main/default/objects/Applicant__c/fields/Passport_message__c.field-meta.xml
<CustomField>
    <fullName>Passport_message__c</fullName>
    <label>Passport message</label>
    <length>200</length>
    <type>Text</type>
</CustomField>