force-app/main/default/objects/Applicant__c/fields/Personal_Webside_Adress__c.field-meta.xml
<CustomField>
    <fullName>Personal_Webside_Adress__c</fullName>
    <label>Personal Webside Adress</label>
    <type>Url</type>
</CustomField>