force-app/main/default/objects/Applicant__c/fields/Police_verification__c.field-meta.xml
<CustomField>
    <fullName>Police_verification__c</fullName>
    <formula>IF( Age__c &gt;=18, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Police verification</label>
    <type>Checkbox</type>
</CustomField>