force-app/main/default/objects/Applicant__c/fields/Require_Document_List__c.field-meta.xml
<CustomField>
    <fullName>Require_Document_List__c</fullName>
    <label>Require Document List</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aadhar Card</fullName>
            </value>
            <value>
                <fullName>Pan Card</fullName>
            </value>
            <value>
                <fullName>Driving Licence</fullName>
            </value>
            <value>
                <fullName>12th Marksheet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>