force-app/main/default/objects/Applicant__c/fields/True_Verification__c.field-meta.xml
<CustomField>
    <fullName>True_Verification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>True Verification</label>
    <type>Checkbox</type>
</CustomField>