force-app/main/default/objects/Applicant__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>Applicant__c</referenceTo>
    <relationshipLabel>Applicants (User)</relationshipLabel>
    <relationshipName>Applicants1</relationshipName>
    <type>Lookup</type>
</CustomField>