force-app/main/default/objects/Applicant__c/validationRules/preven_age_gender_is_female_dob_is_nove.validationRule-meta.xml
<ValidationRule>
    <fullName>preven_age_gender_is_female_dob_is_nove</fullName>
    <active>false</active>
    <errorConditionFormula>AND(or(Age__c&gt;=20, Age__c =30),
 ISPICKVAL( Gender__c , &apos;female&apos;) ,
 MONTH(  DOB__c )=11
)</errorConditionFormula>
    <errorMessage>locha</errorMessage>
</ValidationRule>