force-app/main/default/objects/Applicant__c/validationRules/Prevent_age_less_than_18.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_age_less_than_18</fullName>
    <active>false</active>
    <description>prevent applicant, if age &lt;18</description>
    <errorConditionFormula>Age__c &lt;18</errorConditionFormula>
    <errorMessage>Applicant must not be less than 18</errorMessage>
</ValidationRule>