force-app/main/default/objects/Applicant__c/validationRules/prevent_blank_last_name.validationRule-meta.xml
<ValidationRule>
    <fullName>prevent_blank_last_name</fullName>
    <active>false</active>
    <description>prevent applicant , if last name is blank</description>
    <errorConditionFormula>ISBLANK( Last_Name__c )</errorConditionFormula>
    <errorDisplayField>Last_Name__c</errorDisplayField>
    <errorMessage>last name cannot be blank</errorMessage>
</ValidationRule>