force-app/main/default/objects/Applicant__c/validationRules/prevent_blank_last_name_agent.validationRule-meta.xml
<ValidationRule>
    <fullName>prevent_blank_last_name_agent</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISBLANK( Last_Name__c ),$Profile.Id = &apos;Agent&apos;)</errorConditionFormula>
    <errorDisplayField>Last_Name__c</errorDisplayField>
    <errorMessage>prevent applicant if last name is blank</errorMessage>
</ValidationRule>