force-app/main/default/objects/Applicant__c/validationRules/prevent_DOB_month_august.validationRule-meta.xml
<ValidationRule>
    <fullName>prevent_DOB_month_august</fullName>
    <active>false</active>
    <description>prevent applicant if DOB month is august</description>
    <errorConditionFormula>MONTH( DOB__c ) ==8</errorConditionFormula>
    <errorDisplayField>DOB__c</errorDisplayField>
    <errorMessage>DOB month should not be august</errorMessage>
</ValidationRule>