force-app/main/default/objects/Applicant__c/validationRules/prevent_first_name.validationRule-meta.xml
<ValidationRule>
    <fullName>prevent_first_name</fullName>
    <active>false</active>
    <errorConditionFormula>or(AND( Age__c &lt;18, ISPICKVAL( Gender__c , &apos;female&apos;) ), AND( Age__c &lt; 30, ISPICKVAL( Gender__c , &apos;male&apos;) ) )</errorConditionFormula>
    <errorMessage>check age of female or male</errorMessage>
</ValidationRule>