force-app/main/default/objects/Applicant__c/validationRules/Prevent_invalid_PAN_Card_number.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_invalid_PAN_Card_number</fullName>
    <active>false</active>
    <errorConditionFormula>NOT (REGEX( Pan_Card__c , &quot;[A-Za-z]{5}[0-9]{4}[A-Za_z]{1}&quot;) )</errorConditionFormula>
    <errorDisplayField>Pan_Card__c</errorDisplayField>
    <errorMessage>invalid pan card number</errorMessage>
</ValidationRule>