force-app/main/default/objects/Applicant__c/validationRules/prevent_male_applicant.validationRule-meta.xml
<ValidationRule>
    <fullName>prevent_male_applicant</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL( Gender__c , &apos;male&apos;)</errorConditionFormula>
    <errorDisplayField>Gender__c</errorDisplayField>
    <errorMessage>male applicant is currently not allowed</errorMessage>
</ValidationRule>