force-app/main/default/objects/Applicant__c/validationRules/prevent_male_or_trans_police_verify.validationRule-meta.xml
<ValidationRule>
    <fullName>prevent_male_or_trans_police_verify</fullName>
    <active>false</active>
    <errorConditionFormula>AND(or( ISPICKVAL( Gender__c , &apos;female&apos;) , ISPICKVAL( Gender__c , &apos;transgender&apos;) ), Police_Verification__c )</errorConditionFormula>
    <errorMessage>gender cannot be female or transgender when applicant is eligible for police verification</errorMessage>
</ValidationRule>