force-app/main/default/objects/Applicant__c/validationRules/prevent_special_symbol_first_or_last_na.validationRule-meta.xml
<ValidationRule>
    <fullName>prevent_special_symbol_first_or_last_na</fullName>
    <active>false</active>
    <errorConditionFormula>or(NOT(REGEX(  First_Name__c , &quot;^[a-zA-Z0-9_]*$&quot;)),
NOT(REGEX(  Last_Name__c , &quot;^[a-zA-Z0-9_]*$&quot;)))</errorConditionFormula>
    <errorMessage>error in symbols of first or last name</errorMessage>
</ValidationRule>