force-app/main/default/objects/Applicant__c/validationRules/prvent_first_name_not_start_with_B.validationRule-meta.xml
<ValidationRule>
    <fullName>prvent_first_name_not_start_with_B</fullName>
    <active>false</active>
    <errorConditionFormula>NOT( First_Name__c = &apos;B&apos;)</errorConditionFormula>
    <errorDisplayField>First_Name__c</errorDisplayField>
    <errorMessage>first name not start with B</errorMessage>
</ValidationRule>