force-app/main/default/objects/Applicant__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <booleanFilter>1 OR 2 OR 3</booleanFilter>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Gender__c</columns>
    <columns>Age__c</columns>
    <columns>True_Verification__c</columns>
    <columns>Special_Mark_On_Body__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Gender__c</field>
        <operation>equals</operation>
        <value>Male</value>
    </filters>
    <filters>
        <field>Gender__c</field>
        <operation>equals</operation>
        <value>Female</value>
    </filters>
    <filters>
        <field>Gender__c</field>
        <operation>equals</operation>
        <value>Transgender</value>
    </filters>
    <label>All</label>
</ListView>