force-app/main/default/objects/Applicant__c/listViews/Gender_Male.listView-meta.xml
<ListView>
    <fullName>Gender_Male</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Gender__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Gender__c</field>
        <operation>equals</operation>
        <value>Male</value>
    </filters>
    <label>Gender Male</label>
</ListView>